--- a/Zahnrad Designer/Zahnrad Designer/Zahnrad Designer.csproj
+++ b/Zahnrad Designer/Zahnrad Designer/Zahnrad Designer.csproj
@@ -73,12 +73,18 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="XamlAnimatedGif, Version=1.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\XamlAnimatedGif.1.2.3\lib\net45\XamlAnimatedGif.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Zahnrad_Auswahl.xaml.cs">
+      <DependentUpon>Zahnrad_Auswahl.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -91,6 +97,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Zahnrad_Auswahl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -110,6 +120,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -162,6 +173,13 @@
     <Folder Include="Stirnräder\Pfeilverzahnung\" />
     <Folder Include="Stirnräder\Schraubenrad\" />
     <Folder Include="Stirnräder\Schrägverzahnung\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Bilder\Schnecke auswahl.png" />
+    <Resource Include="Bilder\Startseite Kegelrad.png" />
+    <Resource Include="Bilder\Startseite Stirnrad.jpg" />
+    <Resource Include="Bilder\Zahnrad gif.gif" />
+    <Resource Include="Bilder\Zahnräder.Icon.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
